# SocialGraph-SpringBoot

./: .dockerignore  .gitignore  .project  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  llms-full.txt  llms.txt  mvnw  mvnw.cmd  openapi.json  pom.xml
.claude/skills/: README.md
.claude/skills/api-endpoint-work/: SKILL.md
.claude/skills/persistence-work/: SKILL.md
.claude/skills/redis-schema-work/: SKILL.md
.claude/skills/storage-provider-work/: SKILL.md
docker/infinispan/: infinispan-resp.xml
docs/: README.md  agent-skills.md  ai.md  architecture.md  authentication.md  configuration.md  getting-started.md  persistence.md  testing.md
docs/api/: README.md  actions.md  auth.md  errors.md  images.md  search.md  status.md  storage.md  timeline.md  users.md
docs/internals/: image-pipeline.md  infinispan-schema.md  persistence-abstraction.md  redis-schema.md  security-filter.md  storage-providers.md  timeline-delivery.md
embedding-sidecar/: .gitignore  Cargo.toml  Dockerfile  README.md
embedding-sidecar/src/: config.rs  error.rs  image_fetch.rs  main.rs  models.rs  state.rs
embedding-sidecar/src/routes/: embed.rs  health.rs  mod.rs  summarize.rs
embedding-sidecar/tests/: smoke.rs
src/main/java/com/camerarrific/socialgraph/: SocialGraphApplication.java
src/main/java/com/intelligenta/socialgraph/: BigHex.java  EdgeScore.java  LiquidRescaler.java  PasswordHash.java  SocialGraphApplication.java  Verbs.java
src/main/resources/: application-dev.yml  application-prod.yml  application.yml
src/test/java/com/camerarrific/socialgraph/: SocialGraphApplicationTests.java
src/test/java/com/intelligenta/socialgraph/: ApiSurfaceRegressionTest.java  CoreUtilitiesTest.java
src/test/resources/: application-test.yml
(+211 files in other folders)
