[package]
name = "embedding-sidecar"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"
publish = false

[dependencies]
axum = "0.7"
tokio = { version = "1.40", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "limit"] }
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
hf-hub = { version = "0.3", default-features = false, features = ["tokio"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
moka = { version = "0.12", features = ["future"] }
bytes = "1"
futures = "0.3"
arc-swap = "1.7"

# Candle pulled in as an optional runtime dep; the real model loaders live
# behind the `models` feature so the binary can run (with stubbed output) on
# machines that lack CUDA/Metal/etc. CI can build both variants.
candle-core = { version = "0.8", default-features = false, optional = true }
candle-nn = { version = "0.8", optional = true }
candle-transformers = { version = "0.8", optional = true }

[features]
default = []
models = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers"]
cuda = ["models", "candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
metal = ["models", "candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
accelerate = ["models", "candle-core/accelerate", "candle-nn/accelerate"]

[[bin]]
name = "embedding-sidecar"
path = "src/main.rs"
